fix: wrap MessageBox in div that spans columns

--- a/src/page-modules/assistant/assistant.module.css
+++ b/src/page-modules/assistant/assistant.module.css
@@ -130,12 +130,6 @@
   gap: var(--spacings-medium);
 }
 
-.geolocationError {
-  background-color: var(--static-status-warning-background);
-  color: var(--static-status-warning-text);
-  padding: var(--spacings-medium);
+.spanColumns {
   grid-column: 1 / -1;
-  border-radius: var(--border-radius-regular);
-  display: flex;
-  gap: var(--spacings-small);
 }
